--- a/dapp/src/partials/wallet.html
+++ b/dapp/src/partials/wallet.html
@@ -1,9 +1,9 @@
 <div class="page-header">
   <h1>
-    {{wallet.name}} {{balance|ether}}
+    {{wallet.name}} {{balance|ether:chain}}
   </h1>
   <h5 class="grey">{{wallet.address}}</h5>
-  <span class="btn btn-success" ng-click="showSafeMigrationModal()">Safe Multisig Migration</span>
+  <span class="btn btn-success" ng-click="showSafeMigrationModal()" ng-show="{{chain != 'trsk' && chain != 'rsk'}}">Safe Multisig Migration</span>
 </div>
 <!-- Owners panel -->
 <div class="panel panel-default">
@@ -226,7 +226,7 @@
           </div>
         </td>
         <td>
-          {{transactions[txId].value|ether}}
+          {{transactions[txId].value|ether:chain}}
         </td>
         <td>
           <div class="text-center" ng-show="!transactions[txId].dataDecoded.title">
