--- a/dapp/src/partials/wallets.html
+++ b/dapp/src/partials/wallets.html
@@ -61,7 +61,7 @@
           </div>
         </td>
         <td>
-          <span value-or-dash-by-connectivity="{{wallet.balance|ether}}">{{wallet.balance|ether}}</span>
+          <span value-or-dash-by-connectivity="{{wallet.balance|ether:chain}}">{{wallet.balance|ether:chain}}</span>
           <button type="button" disabled-if-no-accounts-or-wallet-available="{{wallet.address}}"
             class="btn btn-default btn-sm pull-right"
             ng-click="deposit(wallet)">
@@ -77,7 +77,7 @@
           </button>
         </td>
         <td>
-          <span value-or-dash-by-connectivity="{{wallet.limit|ether}}">{{wallet.limit|ether}}</span>
+          <span value-or-dash-by-connectivity="{{wallet.limit|ether:chain}}">{{wallet.limit|ether:chain}}</span>
           <button type="button" disabled-if-no-accounts-or-wallet-available="{{wallet.address}}"
             class="btn btn-default btn-sm pull-right"
             ng-click="setLimit(wallet)">
@@ -85,7 +85,7 @@
           </button>
         </td>
         <td>
-          <span value-or-dash-by-connectivity="{{wallet.maxWithdraw|ether}}">{{wallet.maxWithdraw|ether}}</span>
+          <span value-or-dash-by-connectivity="{{wallet.maxWithdraw|ether:chain}}">{{wallet.maxWithdraw|ether:chain}}</span>
           <button type="button" disabled-if-no-accounts-or-wallet-available="{{wallet.address}}"
             class="btn btn-default btn-sm pull-right"
             data-action="withdraw"
